# gdb-debug

./: CMakeLists.txt  README.md  Test.md  build.sh  instr.h  main.c  main.cpp  mylib.c  st.cpp  st.h  st_v2.cpp  test.cpp  var.cpp  var.h
Path/: Path.cpp  Path.st  lib.h  type.h
RobotControl/: RobotControl.cpp  RobotControl.st  mc_power.h  type.h
TCP/: SenMessage.h  TCP.cpp  TCP.st  blink.h  lib.h  nbs.h  type.h
debug/: loop.c  loop.h
doc/: result.md
include/: mylib.h
src/: main.c  mylib.c
